--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "clmtrackr"]
 	path = clmtrackr
-	url = git@github.com:auduno/clmtrackr.git
+	url = https://github.com/auduno/clmtrackr.git
